--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ca7ed994-79ca-4192-957e-f496ff3d85f6",
    "metadata": {},
    "outputs": [
@@ -352,8 +352,7 @@
     "\n",
     "\n",
     "r = 8  # radius\n",
-    "vol = (4/3) * 3.14159 * r**3  # formula for the volume of a sphere\n",
-    "print(vol)"
+    "vol = (4/3) * 3.14159 * r**3  # formula for the volume of a sphere\n"
    ]
   },
   {
@@ -368,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "90bd1eae-f5f1-4198-95bd-2d41952d2e72",
    "metadata": {},
    "outputs": [
@@ -389,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ae40e3bb-7663-4ea7-a753-a7f7d31b41c8",
    "metadata": {},
    "outputs": [
@@ -410,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3523346b-43fe-4b02-8994-d390531748d5",
    "metadata": {},
    "outputs": [
@@ -431,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e8ea0c4a-f816-4080-82a1-89367824a246",
    "metadata": {},
    "outputs": [
@@ -452,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "dcdfabff-1934-45ad-a961-2596a7c285ab",
    "metadata": {},
    "outputs": [
@@ -481,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a0c296ac-6a4c-48a5-a974-223dc7ba92b3",
    "metadata": {},
    "outputs": [
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "534a3ad8-f746-47f3-972a-ea818dd2b33a",
    "metadata": {},
    "outputs": [
@@ -532,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0596b507-c712-47f5-bdd0-7e392ff06a73",
    "metadata": {},
    "outputs": [
@@ -554,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a747dba4-2f81-4f97-ad36-0b7794a6deaf",
    "metadata": {},
    "outputs": [
@@ -575,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6f4503e3-a10b-4565-899c-0b800682add9",
    "metadata": {},
    "outputs": [
@@ -597,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "54e93933-45d9-4cce-9998-b983301078be",
    "metadata": {},
    "outputs": [
@@ -618,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "dd146874-48d2-4de2-b2d3-3e3fa70ea1af",
    "metadata": {},
    "outputs": [
@@ -641,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f1d4990a-d2c6-4b89-9b9d-121dcc5b189c",
    "metadata": {},
    "outputs": [
@@ -664,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "eabd00f1-bf56-463a-89e5-5e5c0cf0e134",
    "metadata": {},
    "outputs": [
@@ -685,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f235a1fc-a5b4-495a-b7b2-bc6890ac7fb7",
    "metadata": {},
    "outputs": [
@@ -708,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "30d177c2-4ba8-4c93-9bd6-6afff74d420c",
    "metadata": {},
    "outputs": [
@@ -741,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "d924c375-683b-46d0-baf8-d8a6ac934df4",
    "metadata": {},
    "outputs": [
@@ -783,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "e3fbd105-2151-4988-8e00-0833e5f4b447",
    "metadata": {},
    "outputs": [
@@ -817,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "2e67db51-48cf-405d-ab18-11ce47d3ba08",
    "metadata": {},
    "outputs": [
@@ -838,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "084775a0-08ac-4cf7-a81f-befdba119d1e",
    "metadata": {},
    "outputs": [
@@ -859,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "9c95dddc-c1cf-4bb2-b2f8-1e9255d114e3",
    "metadata": {},
    "outputs": [
@@ -880,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "8d1f5486-4b0b-4b28-95e0-146d47bcc7b7",
    "metadata": {},
    "outputs": [
@@ -1070,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "6c541467-b241-40c6-8411-92573dbfc13a",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "53e2caad-777b-4164-9311-87482d417bfb",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "a5b77d34-0f53-439f-9c27-82bf5b22672a",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "ac8c304a-f434-4bbe-8914-d3e63c9aa466",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "17acdb5c-99e3-4dca-81f4-0ccadec4534d",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "8dc87eee-090b-4b56-8b7d-7f2e77185fcc",
    "metadata": {},
    "outputs": [],
@@ -1258,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "74d317ea-6533-459f-b192-4a31ffb91b57",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "06bb9d01-0215-4df3-97f0-de586a7e7d83",
    "metadata": {},
    "outputs": [
@@ -1318,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "64402f77-7a34-4f43-8209-1c34222b3fbb",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "40fccba6-c294-45c1-9201-cbedcfaf8dbf",
    "metadata": {},
    "outputs": [
@@ -1380,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "0c524146-80aa-4f7e-9db3-389ab6797e20",
    "metadata": {},
    "outputs": [
@@ -1401,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "d5f2f710-32a2-45fd-a98e-1bcf24393700",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "4eb82bb0-9163-48e5-8fc5-019f49df0a69",
    "metadata": {},
    "outputs": [],
@@ -1442,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "0b93d48a-d61e-4713-9b97-3d7543d4e62a",
    "metadata": {},
    "outputs": [
@@ -1465,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "d8a7fb17-2322-4f15-93e3-1f300bf40547",
    "metadata": {},
    "outputs": [],
@@ -1477,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "2031f9f0-6acd-491e-8590-bc9d3eed1030",
    "metadata": {},
    "outputs": [],
@@ -1489,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "87ae3d8a-bc80-4c44-81b4-a3e158f23fd2",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "d12e9b05",
    "metadata": {},
    "outputs": [
@@ -1539,7 +1538,6 @@
    "source": [
     "#si-oddsOrEvens\n",
     "oddsOrEvens = [i if i % 2 == 0 else -i for i in range(1, 51)]\n",
-    "print(oddsOrEvens)\n",
     "\n"
    ]
   },
@@ -1563,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "554123cd-ab35-4290-95dc-53a3fca5fd08",
    "metadata": {},
    "outputs": [],
@@ -1585,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "9ecb01cf-e6e4-4609-86bc-c4b3af0dacc9",
    "metadata": {},
    "outputs": [
@@ -1614,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "8983f628-7a72-459e-bfe1-e847191e7bba",
    "metadata": {},
    "outputs": [],
@@ -1632,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "a7f7cd4c-5455-4379-92c4-88a6bc02575b",
    "metadata": {},
    "outputs": [
@@ -1664,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "7ba8ee06-a241-400b-87b3-05d8cd876360",
    "metadata": {},
    "outputs": [
@@ -1697,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "a8e650a7-1581-426f-aeb7-a98d01c0a8b6",
    "metadata": {},
    "outputs": [
@@ -1720,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "4cbf58c9-9c5d-4de8-ba5e-aba9ac9eeb00",
    "metadata": {},
    "outputs": [
@@ -1743,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "2a63cc51-a5a0-4cfb-b46d-8fffe5718953",
    "metadata": {},
    "outputs": [
@@ -1784,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "8d24b265-2b0b-4424-964e-071948b2ce25",
    "metadata": {},
    "outputs": [],
