--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -350,7 +350,6 @@
    "source": [
     "#si-sphere\n",
     "\n",
-    "\n",
     "r = 8  # radius\n",
     "vol = (4/3) * 3.14159 * r**3  # formula for the volume of a sphere\n"
    ]
@@ -1537,6 +1536,7 @@
    ],
    "source": [
     "#si-oddsOrEvens\n",
+    "\n",
     "oddsOrEvens = [i if i % 2 == 0 else -i for i in range(1, 51)]\n",
     "\n"
    ]
@@ -1788,7 +1788,13 @@
    "outputs": [],
    "source": [
     "#si-receipt\n",
-    "\n"
+    "\n",
+    "receipt = {\n",
+    "    \"name\": \"John Doe\",  # example buyer name\n",
+    "    \"items\": [\"T-shirt\", \"Jeans\", \"Sneakers\"],  # list of items purchased\n",
+    "    \"discount\": True,  # whether or not the buyer received a discount\n",
+    "    \"price\": 89.99  # total price paid for the items\n",
+    "}\n"
    ]
   }
  ],
