--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1537,7 +1537,7 @@
    "source": [
     "#si-oddsOrEvens\n",
     "\n",
-    "oddsOrEvens = [i if i % 2 == 0 else -i for i in range(1, 51)]\n",
+    "oddsOrEvens = [(-n if n % 2!=0 else n) for n in range(0,51)]\n",
     "\n"
    ]
   },
