--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -351,7 +351,7 @@
     "#si-sphere\n",
     "\n",
     "r = 8  # radius\n",
-    "vol = (4/3) * 3.14159 * r**3  # formula for the volume of a sphere\n"
+    "vol = (4/3)*3.14159*r**3  # formula for the volume of a sphere\n"
    ]
   },
   {
@@ -757,14 +757,8 @@
    "source": [
     "#si-sphereOrCube\n",
     "# Sphere volume\n",
-    "r = 8\n",
-    "sphere_vol = (4/3) * 3.14159 * r**3\n",
-    "\n",
-    "# Cube volume\n",
-    "edge_length = 12\n",
-    "cube_vol = edge_length**3\n",
-    "\n",
-    "sphereOrCube == sphere_vol > cube_vol "
+    "sphereOrCube= 4/3*3.1415*8**3 > 12**3\n",
+    "print(sphereOrCube)"
    ]
   },
   {
